force-app/main/default/objects/JHA__c/JHA__c.object-meta.xml
<CustomObject>
    <label>JHA Deprecated</label>
    <nameField>
        <label>JHA Deprecated Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JHA Deprecated</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>