force-app/main/default/objects/JHA__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Form</label>
    <referenceTo>disco__Form__c</referenceTo>
    <relationshipName>JHA</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>