force-app/main/default/objects/JHA__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipName>JHA</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>